# oura_ring_pipeline

./: .gitignore  Dockerfile  Dockerfile.superset  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.superset.txt  requirements.txt  rest_api_pipeline.py
.dlt/: config.toml  pipeline_config.yml  secrets.toml.example
dlt/: rest_api_pipeline.py
dlt/sources/: oura_source.py
sqlmesh/: config.yaml
sqlmesh/models/: stg_sleep.sql
sqlmesh/models/marts/: mart_sleep.sql
superset_home/: superset.db
