[project]
name = "oura_pipeline"
version = "0.1.0"
description = "Oura Ring data pipeline"
requires-python = ">=3.11"
dependencies = [
    "dlt[duckdb]==1.9.0",
    "sqlmesh==0.170.0",
    "sqlmesh[web]",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["dlt", "sqlmesh"]